rewrite rational, use slots

--- a/math-fn-practice/python/advanced_classes_and_overloading.ipynb
+++ b/math-fn-practice/python/advanced_classes_and_overloading.ipynb
@@ -2,13 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "\n",
+    "# https://www.tutorialsteacher.com/python/magic-methods-in-python\n",
+    "# https://docs.python.org/3/library/operator.html\n",
+    "# https://wiki.python.org/moin/UsingSlots\n",
+    "\n",
     "class Rational:\n",
+    "    __slots__ = (\"num\", \"den\")\n",
+    "    \n",
     "    def __init__(self, num, den=1):\n",
     "        if not isinstance(num, int) or not isinstance(den, int):\n",
     "            raise ArgumentError(\"Numerator and denominator must be integers\")\n",
@@ -20,7 +26,7 @@
     "        return \"{0}/{1}\".format(self.num,self.den)\n",
     "    \n",
     "    def __repr__(self):\n",
-    "        return \"{0}/{1}\".format(self.num,self.den)\n",
+    "        return \"Rational(num={0},den={1})\".format(self.num,self.den)\n",
     "\n",
     "    def simplify(self):\n",
     "        GCD = math.gcd(self.num,self.den)\n",
@@ -36,6 +42,9 @@
     "        if not isinstance(other, Rational):\n",
     "            raise ArgumentError(\"Other must be an integer or a rational\")\n",
     "        return Rational((self.num*other.den)+(other.num*self.den), self.den*other.den)\n",
+    "    \n",
+    "    def __radd__(self, other):\n",
+    "        return self + other\n",
     "    \n",
     "    def __iadd__(self, other):\n",
     "        if isinstance(other, int):\n",
@@ -55,6 +64,9 @@
     "            raise ArgumentError(\"Other must be an integer or a rational\")\n",
     "        return Rational((self.num*other.den)-(other.num*self.den), self.den*other.den)\n",
     "    \n",
+    "    def __rsub__(self, other):\n",
+    "        return Rational(other) - self\n",
+    "    \n",
     "    def __isub__(self, other):\n",
     "        if isinstance(other, int):\n",
     "            self.num -= other*self.den\n",
@@ -72,6 +84,9 @@
     "        if not isinstance(other, Rational):\n",
     "            raise ArgumentError(\"Other must be an integer or a rational\")\n",
     "        return Rational(self.num*other.num, self.den*other.den)\n",
+    "    \n",
+    "    def __rmul__(self, other):\n",
+    "        return self.num * other / self.den\n",
     "    \n",
     "    def __imul__(self, other):\n",
     "        if isinstance(other, int):\n",
@@ -92,6 +107,9 @@
     "            raise ArgumentError(\"Other must be an integer or a rational\")\n",
     "        return Rational(self.num*other.den, self.den*other.num)\n",
     "    \n",
+    "    def __rtruediv__(self, other):\n",
+    "        return self.den * other / self.num\n",
+    "    \n",
     "    def __itruediv__(self, other):\n",
     "        if isinstance(other, int):\n",
     "            self.den *= other\n",
@@ -103,6 +121,14 @@
     "        self.den *= other.num\n",
     "        self.simplify()\n",
     "        return self\n",
+    "    \n",
+    "    def __floordiv__(self, other):\n",
+    "        return (self.num)//(other*self.den)\n",
+    "    \n",
+    "    # ifloordiv doesn't make sense as floor div should return an int, not a Fraction.\n",
+    "    \n",
+    "    def __rfloordiv__(self, other):\n",
+    "        return (self.den*other)//self.num\n",
     "\n",
     "    def __lt__(self, other):\n",
     "        if not isinstance(other, Rational):\n",
@@ -134,16 +160,42 @@
     "            return self.num >= (other*self.den)\n",
     "        return (self.num*other.den) >= (other.num*self.den)\n",
     "    \n",
-    "    # Returns float, not Rational\n",
+    "    def __pos__(self):\n",
+    "        return Rational(self.num, self.den)\n",
+    "    \n",
+    "    def __neg__(self):\n",
+    "        return Rational(-self.num, self.den)\n",
+    "    \n",
+    "    def __abs__(self):\n",
+    "        return Rational(abs(self.num), self.den)\n",
+    "    \n",
+    "    def __round__(self,n=0):\n",
+    "        return round(self.num/self.den,n)\n",
+    "    \n",
+    "    def __floor__(self):\n",
+    "        return self.num//self.den\n",
+    "    \n",
+    "    def __ceil__(self):\n",
+    "        return math.ceil(self.num/self.den)\n",
+    "    \n",
+    "    def __trunc__(self):\n",
+    "        return math.trunc(self.num/self.den)\n",
+    "    \n",
+    "    # Returns a Rational iff other is an int.\n",
     "    def __pow__(self, other):\n",
+    "        if isinstance(other, int):\n",
+    "            return Rational(self.num**other, self.den**other)\n",
     "        if not isinstance(other, Rational):\n",
     "            return (self.num/self.den)**other\n",
-    "        return (self.num/self.den)**(other.num/other.den)"
+    "        return (self.num/self.den)**(other.num/other.den)\n",
+    "    \n",
+    "    def __mod__(self, other):\n",
+    "        return Rational(self.num%(self.den*other), self.den)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +206,9 @@
       "True\n",
       "True\n",
       "7/12\n",
-      "7/3\n"
+      "7/3\n",
+      "10/3\n",
+      "4/3\n"
      ]
     }
    ],
@@ -167,28 +221,257 @@
     "x+=y\n",
     "print(x)\n",
     "x/=y\n",
+    "print(x)\n",
+    "x+=1\n",
+    "print(x)\n",
+    "x-=2\n",
     "print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Rational(num=4,den=3)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/3\n",
-      "1/8\n"
+      "7/3\n",
+      "-5/3\n",
+      "10/3\n",
+      "2/3\n"
      ]
     }
    ],
    "source": [
-    "x -= 1\n",
-    "print(x-1)\n",
-    "y*=2\n",
-    "print(y/4)"
+    "print(x+1)\n",
+    "print(x-3)\n",
+    "print(2+x)\n",
+    "print(2-x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2/3\n",
+      "10/3\n",
+      "110/3\n",
+      "10/21\n"
+     ]
+    }
+   ],
+   "source": [
+    "x/=2\n",
+    "print(x)\n",
+    "x*=5\n",
+    "print(x)\n",
+    "print(x*11)\n",
+    "print(x/7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Rational(num=10,den=3)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20/3\n",
+      "2/3\n",
+      "6.666666666666667\n",
+      "1.5\n",
+      "0.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# When done in this direction, we keep it as a Fraction.\n",
+    "print(x*2)\n",
+    "print(x/5)\n",
+    "# When done in this direction, we return a float and not a Fraction.\n",
+    "print(2*x)\n",
+    "print(5/x)\n",
+    "# Otherwise this would not work the way we want.\n",
+    "a = 3\n",
+    "a/=x\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5/3\n",
+      "1\n",
+      "3.3\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x/2)\n",
+    "print(x//2)\n",
+    "print(11/x)\n",
+    "print(11//x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-7/2\n",
+      "7/2\n",
+      "7/2\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = Rational(-7,2)\n",
+    "print(+num)\n",
+    "print(-num)\n",
+    "print(abs(num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "1.67\n",
+      "2.0\n",
+      "1.67\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = 5/3\n",
+    "print(round(f))\n",
+    "print(round(f,2))\n",
+    "r = Rational(5,3)\n",
+    "print(round(r))\n",
+    "print(round(r,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "1\n",
+      "-2\n",
+      "-1\n",
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(math.floor(f))\n",
+    "print(math.ceil(f))\n",
+    "print(math.trunc(f))\n",
+    "print(math.floor(-f))\n",
+    "print(math.ceil(-f))\n",
+    "print(math.trunc(-f))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "1\n",
+      "-2\n",
+      "-1\n",
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(math.floor(r))\n",
+    "print(math.ceil(r))\n",
+    "print(math.trunc(r))\n",
+    "print(math.floor(-r))\n",
+    "print(math.ceil(-r))\n",
+    "print(math.trunc(-r))"
    ]
   },
   {
