--- a/math-fn-practice/python/advanced_classes_and_overloading.ipynb
+++ b/math-fn-practice/python/advanced_classes_and_overloading.ipynb
@@ -23,18 +23,17 @@
     "        self.simplify()\n",
     "\n",
     "    def __str__(self):\n",
-    "        return \"{0}/{1}\".format(self.num,self.den)\n",
+    "        return f\"{self.num}/{self.den}\"\n",
     "    \n",
     "    def __repr__(self):\n",
-    "        return \"Rational(num={0},den={1})\".format(self.num,self.den)\n",
+    "        return f\"Rational(num={self.num},den={self.den})\"\n",
     "\n",
     "    def simplify(self):\n",
     "        GCD = math.gcd(self.num,self.den)\n",
+    "        if self.den < 0:\n",
+    "            GCD *= -1\n",
     "        self.num = self.num // GCD\n",
     "        self.den = self.den // GCD\n",
-    "        if self.den < 0:\n",
-    "            self.den = -self.den\n",
-    "            self.num = -self.num\n",
     "\n",
     "    def __add__(self, other):\n",
     "        if isinstance(other, int):\n",
@@ -86,7 +85,7 @@
     "        return Rational(self.num*other.num, self.den*other.den)\n",
     "    \n",
     "    def __rmul__(self, other):\n",
-    "        return self.num * other / self.den\n",
+    "        return self * other\n",
     "    \n",
     "    def __imul__(self, other):\n",
     "        if isinstance(other, int):\n",
@@ -108,7 +107,7 @@
     "        return Rational(self.num*other.den, self.den*other.num)\n",
     "    \n",
     "    def __rtruediv__(self, other):\n",
-    "        return self.den * other / self.num\n",
+    "        return Rational(other)/self\n",
     "    \n",
     "    def __itruediv__(self, other):\n",
     "        if isinstance(other, int):\n",
@@ -128,7 +127,7 @@
     "    # ifloordiv doesn't make sense as floor div should return an int, not a Fraction.\n",
     "    \n",
     "    def __rfloordiv__(self, other):\n",
-    "        return (self.den*other)//self.num\n",
+    "        return Rational(other)//self\n",
     "\n",
     "    def __lt__(self, other):\n",
     "        if not isinstance(other, Rational):\n",
